[package]
name = "the_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bursar"
path = "src/bursar.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"


[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"]}
rust_decimal = { version = "1.26.1", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.26"
log = "0.4.0"
env_logger = "0.8.4"